<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable name="viewModel" type="org.leapyears.MainActivityViewModel"/>
        <import type="android.view.View" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:padding="16dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/enter_a_year"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/enter_a_year"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <EditText
            android:id="@+id/year"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/enter_a_year"
            android:inputType="number" />

        <Button
            android:id="@+id/check_year"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/check_leap_year"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/year"
            android:onClick='@{() -> viewModel.checkYear(year.getText().toString())}'/>

        <TextView
            android:id="@+id/is_leap_year"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            tools:text="2019 is not a leap year"
            app:layout_constraintTop_toBottomOf="@+id/check_year"
            android:text='@{viewModel.isLeapYear() != null ? (viewModel.isLeapYear() ? @string/is_leap(year.getText().toString()) : @string/is_not_leap(year.getText().toString()))  : null}'
            android:visibility='@{viewModel.isLeapYear() != null ? View.VISIBLE : View.GONE}'/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>